--- a/homeassistant/components/flux/manifest.json
+++ b/homeassistant/components/flux/manifest.json
@@ -5,5 +5,6 @@
   "codeowners": [],
   "documentation": "https://www.home-assistant.io/integrations/flux",
   "iot_class": "calculated",
-  "quality_scale": "internal"
+  "quality_scale": "internal",
+  "version": "1.1"
 }
